# Aracdia

./: .gitignore  README.md
.cursor/rules/: game-dev-reload.mdc
.github/workflows/: game-release.yml  launcher-build.yml
docs/: ARACDIA_NATIVE_UI.md  ARCHITECTURE.md  CREATE_ARACDIA_ENGINE.md
game/: README.md  game.conf
game/mods/aracdia_core/: aliases.lua  biomes.lua  environment.lua  init.lua  mod.conf  nodes.lua
game/mods/aracdia_menu/: build_mode.lua  creative.lua  init.lua  inventory.lua  menu.lua  mod.conf  state.lua  triggers.lua
game/tools/: gen_placeholders.py
launcher/: index.html  package-lock.json  package.json  tsconfig.json
launcher/src/: App.tsx  styles.css
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/src/: content.rs  download.rs  engine.rs  game.rs  launch.rs  lib.rs  paths.rs  profile.rs  server.rs  settings.rs
launcher/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
launcher/src/lib/: content.ts  engine.ts  launch.ts  profile.ts  server.ts  settings.ts  utils.ts
launcher/src/screens/: HomeScreen.tsx  LoginScreen.tsx  SettingsScreen.tsx
scripts/: dev-reload-game.sh
server/: README.md
