[package]
name = "launcher"
version = "0.1.0"
description = "Aracdia Launcher"
authors = ["Aracdia Team"]
edition = "2021"

[lib]
name = "launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
once_cell = "1"
