[package]
name = "launcher"
version = "0.1.0"
description = "Aracdia Launcher"
authors = ["Aracdia Team"]
edition = "2021"

[lib]
name = "launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
once_cell = "1"

# Engine download / install pipeline
tokio = { version = "1", features = ["fs", "io-util", "sync", "macros", "rt-multi-thread", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "gzip"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
